build/log/idf_py_stderr_output_556677
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c: In function 'startWebESPApp':
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:57:21: warning: initialization of 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   57 |             .ssid = config.wifi_ssid,
      |                     ^~~~~~
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:57:21: note: (near initialization for 'wifi_config.sta.ssid[0]')
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:58:25: warning: initialization of 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   58 |             .password = config.wifi_pwd,
      |                         ^~~~~~
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:58:25: note: (near initialization for 'wifi_config.sta.password[0]')
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:55:33: error: missing braces around initializer [-Werror=missing-braces]
   55 |     wifi_config_t wifi_config = {
      |                                 ^
   56 |         .sta = {
   57 |             .ssid = config.wifi_ssid,
      |                     {               }
   58 |             .password = config.wifi_pwd,
      |                         {              }
   59 |             .threshold.authmode = WIFI_AUTH_WPA2_PSK,
      |                                                     }
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:55:33: error: missing braces around initializer [-Werror=missing-braces]
   55 |     wifi_config_t wifi_config = {
      |                                 ^
   56 |         .sta = {
   57 |             .ssid = config.wifi_ssid,
      |                     {               }
   58 |             .password = config.wifi_pwd,
      |                         {              }
   59 |             .threshold.authmode = WIFI_AUTH_WPA2_PSK,
      |                                                     }
/home/joagz/esp-idf/projects/web-esp32/webesp/webesp32.c:55:33: error: missing braces around initializer [-Werror=missing-braces]
   55 |     wifi_config_t wifi_config = {
      |                                 ^
   56 |         .sta = {
   57 |             .ssid = config.wifi_ssid,
      |                     {               }
   58 |             .password = config.wifi_pwd,
      |                         {              }
   59 |             .threshold.authmode = WIFI_AUTH_WPA2_PSK,
      |                                                     }
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:132: esp-idf/main/CMakeFiles/__idf_main.dir/__/webesp/webesp32.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5484: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
